# dsprites-viewer

./: .gitignore  CMakeLists.txt  LICENSE  README.md
src/: DSprites.cpp  DSprites.h  main.cpp
